2009-03-03  Murray Cumming  <murrayc@murrayc.com>

	* *.[h|cc]: Include all libglom headers via libglom/ instead of 
	glom/libglom so it works from outside, with the path to the installed 
	headers, from pkg-config.
	* All Makefile.am files: Add -I@top_srcdir@/glom to AM_CPPFLAGS.
	The repetition is awful. We should avoid that somehow.

2009-03-03  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/libglom/Makefile.am:
	* glom/libglom/glom-1.0.pc.in: Added and installed pkg-config file.

	* glom/Makefile.am:
	* glom/libglom/data_structure/Makefile.am:
	* glom/libglom/data_structure/layout/Makefile.am:
	* glom/libglom/data_structure/layout/report_parts/Makefile.am:
	* glom/libglom/document/Makefile.am:
	* glom/python_embed/python_module/Makefile.am:
	* regression_tests/Makefile.am: Change libglom to libglom-1.0 so we can 
	use proper API versioning. Install the headers.

	* glom/libglom/document/document_glom.cc: Use std::auto_ptr<> to 
	avoid instantiating Bakery::BusyCursor if no parent window was set, 
	to avoid the need to initialize gtkmm/GTK+.

2009-03-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.h: Add some SWIG ifdefs to 
	improve the Java wrapping output with swig.

2009-03-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_existing_or_new.cc: Parser::on_start_element():
	Call xmlStopParser() to avoid unnecessary extra parsing, fixing a TODO.

2009-03-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/Makefile.am:
	* glom/libglom/document/document_glom.[h|cc]: Renamed the *_HOSTED enum values to 
	use a prefix. Moved the View tyepdefs into a view.h file.

	* glom/application.cc:
	* glom/base_db.h:
	* glom/dialog_connection.cc:
	* glom/frame_glom.cc:
	* glom/layout_item_dialogs/dialog_field_layout.h:
	* glom/mode_design/dialog_design.h:
	* glom/relationships_overview/dialog_relationships_overview.h:
	* glom/translation/dialog_identify_original.h: