@@ -120,7 +120,7 @@ public:
 
     //This reduces the ifdefs elsewhere:
 #ifdef GLOM_ENABLE_POSTGRESQL
-    DEFAULT_HOSTED = HOSTING_MODE_POSTGRES_CENTRAL
+    DEFAULT_HOSTED = HOSTING_MODE_POSTGRES_SELF
 #else
     DEFAULT_HOSTED = HOSTING_MODE_SQLITE
 #endif
